src/App.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

body {
    font-family: 'Press Start 2P', cursive;

}


:root{
    background-image: url("./assets/pikachu-background.jpg");
    background-position-y: 10%;
    background-position-x: center;
    background-size:cover;
    background-repeat: no-repeat
}

div#root{
    display:grid;
    grid-template-rows: max-content 1fr;
    height:100vh;
}

div.title{
    padding: 10px;
    padding-left: 50px;
    padding-right:50px;
    text-align: start;
    display: flex;
    align-items: center;
    background-color:#fff3bc;
    gap: 20px;

    h1{
        width:min-content;
    }

    p{
        font-size:15px;
        text-align:center;
        max-width:220px;
    }

    p.score{
        margin-left:auto;
    }
}


div.outerContainer{
    display: flex;
    flex-direction: column;
    justify-content:center;
    align-items:center;
}

div.container{

    display:grid;
    grid-template-rows: max-content;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    gap: 3px;
    min-width: min-content;
    margin:20px;
    width: calc(100% - 40px);
    box-sizing:border-box;
    max-width: 1300px;

    background-color: #ff44007c;
    
    border-radius: 10px;
    padding: 10px;
    border: 2px black solid;

}

body,h1,h2,p,button,figure,img{
    margin:0;
    padding:0;
}

span.title1{
    color: #d60000
}

span.title2{
    color: #0d23c9
}

@media(max-width: 800px){
    div.title{
        flex-direction:column;
        text-align:center;
        p.score{
            margin-left:0;
        }
    }

    div.container{
        display:flex;
        flex-direction:row;
        flex-wrap:wrap;
        max-width:630px;
    }

    figure:nth-child(-n+6){
        flex: 1 1 calc(33.33% - 10px);
    }
    figure:nth-child(n+7){
        flex: 1 1 calc(25% - 10px);
    }
}

